--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,8 @@
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
-  margin: 0 auto;
+  margin: 20px;
+  font-family: IBM Plex Mono, sans-serif;
 }
 
 h1,
@@ -40,3 +41,4 @@ a {
   font-size: inherit;
   line-height: inherit;
 }
+
