--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,554 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+/* Стилизация кнопок хэдера */
+.header__theme-menu-list{
+    display: flex;
+    justify-content: center;
+    gap: 25px;
 
+    margin-block-end: 273px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.header__theme-menu-button{
+    border: none;
+    background-color: transparent;
+    position: relative;
+}
+
+.header__theme-menu-button:hover::after{
+    content: "";
+    position: absolute;
+    border: 1px solid rgba(50, 49, 45, 0.40);
+    width: 70px;
+    height: 26px;
+    left: -7px;
+    top: 2px;
+}
+
+.header__theme-menu-button_type_auto{
+    pointer-events: none; /*Отмена hover эффектов для элемента*/
+}
+
+.header__theme-menu-button:focus{
+    border-bottom: 1px solid #353430;
+    outline: none;
+}
+/* /Стилизация кнопок хэдера */
+
+.header {
+    position: relative;
+}
+
+.header-decoration {
+    display: none;
+}
+
+.header::before{
+    position: absolute;
+    z-index: -1;
+    content: "";
+    width: calc(100vw - 11px);
+    height: 100%;
+    left: -11px;
+    bottom: 21px;
+    background-image: url("../images/cover-image-light.png");
+    background-size: cover;
+    background-position: center;
+}
+
+body {
+    background-color: #FFF1F7;
+}
+
+/* no focus */
+.header_title{
+    font-weight: 700;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    color: #FFC2E6;
+    margin-inline-start: -20px;
+    margin-block-start:-34px;
+    margin-block-end: -55px;
+    text-shadow: 4px 4px 0px #FF0070;
+}
+
+.header_description-item {
+    background-color: #FF8DCB;
+    margin-block-end: 158px;
+    margin-block-start: 132px;
+}
+/* /no focus */
+
+.header_description{
+    font-weight: 700;
+    font-size: 18px;
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    margin-inline-start: auto;
+    margin-block-start: -21px;
+}
+
+/* блок с описанием в хэдере */
+
+.header_description-item{
+    color: rgba(53, 52, 48, 1);
+}
+
+/* /блок с описанием в хэдере */
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+}
+
+/* блоки с описанием в main */
+.main__description_title {
+    grid-area: 1 / 1 / 3 / 2;
+    font-size: 18px;
+    font-weight: 700;
+    color: #353430;
+    width: 100%;
+}
+
+.main__description_block-title{
+    font-size: 18px;
+    font-weight: 700;
+    color: #353430;
+    background: #FF8DCB;
+}
+
+.main__description_block-text{
+    font-size: 18px;
+    font-weight: 400;
+    color: #353430;
+    line-height: 1.3;
+}
+
+.main__description_block{
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.main__description{
+    display: grid;
+    grid-template-columns: 1fr 66%;
+    gap: 20px;
+    align-items: start;
+    padding-block-start: 39px;
+}
+
+.main__description_second{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 10vw 1fr;
+    gap: 20px;
+    align-items: start;
+    margin-block-start: 24px;
+}
+
+.main__description_title-second{
+    grid-area: 1 / 1 / 2 / 4;
+    grid-template-columns: 1fr 1fr 1fr;
+    font-size: 18px;
+    font-weight: 700;
+    color: #353430;
+    margin-block-start: 54px;
+    width: 30%;
+}
+
+.main__description_block-second{
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.main__description_block-last{
+    margin-block-end: 20px;
+    margin-block-start: 81px;
+}
+.main__description_title-third{
+    grid-area: 1 / 1 / 7 / 2;
+    font-size: 18px;
+    font-weight: 700;
+    color: #353430;
+    margin-block-start: 81px;
+    width: 100%;
+}
+
+.main__description_third{
+    margin-block-start: 1px;
+    display: grid;
+    grid-template-columns: 1fr 66%;
+    gap: 20px;
+}
+
+.main__description_block-third{
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    gap: 10px;
+}
+
+.main__description_block-thirdEmpty{
+    margin-block-start: 80px;
+}
+
+.main__description_block_title-third{
+    font-size: 18px;
+    font-weight: 400;
+    color: #353430;
+    background: #FF8DCB;
+}
+
+.main__description_last{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 260px 315px 428px;
+}
+
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+    display: block;
+}
+
+.main__description_image-sunset{
+    grid-column: span 2;
+}
+
+.main__description_image-ice-cream{
+    grid-row: span 2;
+}
+
+.main__description_image-tape{
+    grid-row: span 2
+}
+
+.main__description_image-street{
+    grid-column: span 2;
+}
+/* /блоки с описанием в main */
+
+/* footer */
+.footer-text{
+    color: #FFC2E6;
+    text-shadow: 2px 2px 0px #FF0070;
+    font-size: 157px;
+    font-weight: 700;
+}
+
+.footer{
+    margin-block-start: 60px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 73.4vw;
+}
+
+.header_title:after{
+    position: absolute;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-top: 1px solid #353430;
+    border-right: 1px solid #353430;
+    right: -1px;
+    top: 1px;
+}
+
+.header_title:before{
+    position: absolute;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-bottom: 1px solid #353430;
+    border-left: 1px solid #353430;
+    left: 0;
+    bottom: 0;
+    margin-block-end: 42px;
+}
+
+.footer_title{
+    font-weight: 700;
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    color: #FFC2E6;
+    margin-block-start:286px;
+    margin-block-end: -55px;
+    height: 10vw;
+    text-shadow: 4px 4px 0px #FF0070;
+}
+
+.footer_title:after{
+    position: absolute;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-top: 1px solid #353430;
+    border-right: 1px solid #353430;
+    margin-block-start: 25px;
+    right: 0;
+    top: 0;
+}
+
+.footer_title:before{
+    position: absolute;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-bottom: 1px solid #353430;
+    border-left: 1px solid #353430;
+    left: 0;
+    bottom: 0;
+}
+/* /footer */
+
+/* стилизация ссылок */
+a{
+    text-shadow: 3px 2px 0px #FF8DCB;
+    text-decoration: none;
+}
+
+a:hover{
+    border-bottom: 1px solid #353430;
+}
+
+a:focus{
+    border: 1px solid #353430;
+    outline: none;
+}
+/* /стилизация ссылок */
+
+/* Медиазапросы */
+
+@media (375px < width <= 768px) {
+
+    .header__theme-menu-list {
+
+        flex-direction:column;
+        align-items: flex-end;
+        padding-block-start: 170px;
+        padding-inline-end: 7px;
+        gap: 11px;
+
+    }
+
+    .header_title{
+        margin-block-start: -125px;
+        margin-block-end: 22px;
+        text-shadow: 4px 4px 0px #FF8DCB;
+
+    }
+
+    .header_description-item{
+        margin-block-end: 206px;
+    }
+
+    .main__description {
+
+        grid-template-columns: 1fr 2fr;
+
+    }
+
+    .main__description_second {
+
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        gap: 0;
+        margin-block-start: -25px;
+
+    }
+
+    .main__description_title-second{
+
+        grid-area: 1 / 1 / 2 / 2;
+        margin-block-start: 106px;
+
+    }
+
+    .main__description_block-second{
+
+        gap: 8px;
+
+    }
+
+    .main__description_third{
+
+        grid-template-columns: 1fr 2fr;
+
+    }
+
+    .main__description_last{
+        grid-template-rows: 192px 229px 318px;
+    }
+
+    .footer{
+        height: 132vw;
+    }
+
+    .footer_title{
+        margin-block-start: 439px;
+        text-shadow: 4px 4px 0px #FF8DCB;
+    }
+
+}
+
+@media (width <= 375px) {
+
+    .page {
+        margin:10px;
+    }
+
+    .header__theme-menu{
+        width: 90%;
+    }
+
+    .header::before{
+        left: -4px;
+        bottom: 90px;
+        width: calc(100vw - 20px);
+    }
+
+    .header__theme-menu-list {
+
+        flex-direction:column;
+        align-items: flex-end;
+        padding-block-start: 64px;
+        margin-block-end: 69px;
+        margin-inline-end: -9px;
+        gap: 11px;
+
+    }
+
+    .header_title{
+        font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+        text-shadow: 4px 4px 0px #FF8DCB;
+        line-height: 94px;
+        margin-inline-start: 0px;
+        margin-block-start: 70px;
+        margin-block-end: -76px;
+    }
+
+    .header_title:before {
+        margin-block-end: 101px;
+        margin-inline-start: -1px;
+    }
+
+    .header_title:after{
+        right: 21px;
+        top: 1px;
+    }
+
+
+
+    .header_description{
+        width: 94.4%;
+        height: 108.4vw;
+        line-height: 24px;
+        margin-inline-start: -1px;
+    }
+
+    .main__description {
+
+        display: flex;
+        flex-direction: column;
+        margin-block-start: -24px;
+        width: 94.4%;
+
+    }
+
+    .main__description_block{
+        margin-inline-start: 0px;
+    }
+
+    .main__description_block-title{
+        width: 95vw;
+    }
+
+    .main__description_title{
+
+
+        margin-block-start: -66px;
+        margin-inline-start: 0px;
+        width: 80%;
+
+    }
+
+    .main__description_second {
+
+        display: flex;
+        flex-direction: column;
+        margin-block-start: -54px;
+        margin-inline-start: 0px;
+        width: 94.4%;
+
+    }
+
+    .main__description_title-second{
+
+        width: 94.4%;
+        margin-block-start: 106px;
+
+    }
+
+    .main__description_third {
+
+        display: flex;
+        flex-direction: column;
+        margin-block-start: -54px;
+        margin-inline-start: 0px;
+        width: 94.4%;
+
+    }
+
+    .main__description_block-thirdEmpty {
+        margin-block-start: 0;
+    }
+
+    .main__description_title-third{
+
+        margin-block-start: 106px;
+        width: 100%;
+    }
+
+    .main__description_last {
+
+        display: flex;
+        flex-direction: column;
+        margin-inline-end: 20px;
+        gap: 10px;
+
+    }
+
+    .main__description_block-last{
+        margin-block-start: 53px;
+        margin-inline-start: 0px;
+        margin-block-end: 11px;
+        width: 80%;
+    }
+
+    .footer {
+        height: 169.5vw;
+    }
+
+    .footer_title {
+        font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+        text-shadow: 4px 4px 0px #FF8DCB;
+        margin-block-start: 237px;
+        margin-inline-start: -21px;
+    }
+
+    .footer_title:after {
+        margin-block-start: -10px;
+        right: 20px;
+    }
+
+    .footer_title:before {
+        margin-inline-start: -1px;
+        bottom: -2px;
+    }
+
 }
