--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,10 +7,10 @@
 }
 
 body {
-  min-inline-size: 375px;
   max-inline-size: 1440px;
-  margin: 20px;
-  font-family: IBM Plex Mono, sans-serif;
+  padding: 20px;
+  margin: 0 auto;
+  font-family: IBM Plex Mono, monospace;
 }
 
 h1,
