--- a/styles/light.css
+++ b/styles/light.css
@@ -4,14 +4,14 @@
   переключая тему
 */
 
-:root {
+:root .theme_light {
 
-    --bg-color-light: #FFF1F7;
-    --text-color-light: #353430;
-    --title-color-light: #353430;
-    --h2_title-color-light: #353430;
-    --bg_title-color-light: #FF8DCB;
-    --focus-color-light: #FFC2E6;
+    --bg-color: #FFF1F7;
+    --text-color: #353430;
+    --title-color: #353430;
+    --heading_title-color: #353430;
+    --bg_title-color: #FF8DCB;
+    --focus-color: #FFC2E6;
 }
 
 
@@ -41,65 +41,39 @@
 }
 
 .theme_light {
-    background-color: var(--bg-color-light);
+    background-color: var(--bg-color);
 }
 
 .theme_light .main__description_block-text {
-    color: var(--text-color-light);
+    color: var(--text-color);
 }
 
 .theme_light .main__description_title {
-    color: var(--h2_title-color-light);
+    color: var(--heading_title-color);
 }
 
 .theme_light .main__description_block-title {
-    color: var(--title-color-light);
-    background-color: var(--bg_title-color-light);
+    color: var(--title-color);
+    background-color: var(--bg_title-color);
 }
 
 .theme_light .header_description-item {
-    background-color: var(--bg_title-color-light);
-    color: var(--title-color-light);
+    background-color: var(--bg_title-color);
+    color: var(--title-color);
 }
 
 .theme_light .header__theme-menu-button {
-    color: var(--h2_title-color-light);
+    color: var(--heading_title-color);
 }
 
 .theme_light .header_title {
-    color: var(--focus-color-light);
+    color: var(--focus-color);
     text-shadow: 4px 4px 0px #FF0070;
 }
 
 .theme_light .footer_title {
-    color: var(--focus-color-light);
+    color: var(--focus-color);
     text-shadow: 4px 4px 0px #FF0070;
-}
-
-.theme_light .header::before {
-    position: absolute;
-    z-index: -1;
-    content: "";
-    width: calc(100vw - 11px);
-    height: 100%;
-    left: -11px;
-    bottom: 21px;
-    background-image: url("../images/cover-image-light.png");
-    background-size: cover;
-    background-position: center;
-}
-
-@media (width <= 375px) {
-
-    .theme_light .header::before {
-        left: -4px;
-        bottom: 90px;
-        width: calc(100vw - 4px);
-    }
-
-    .theme_dark .header-decoration {
-        right: 51px;
-    }
 }
 
 
