--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,19 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 /* Стилизация кнопок хэдера */
 .header__theme-menu-list{
-    display: flex;
+    display: grid;
+    grid-template-columns: min-content min-content min-content;
     justify-content: center;
     gap: 25px;
-
-    margin-block-end: 273px;
     font-size: 18px;
     font-weight: 400;
 }
+.header__theme-menu{
+    align-self: start;
+}
 
 .header__theme-menu-button{
+    cursor: pointer;
     border: none;
     background-color: transparent;
     position: relative;
@@ -26,10 +29,6 @@
     top: 2px;
 }
 
-.header__theme-menu-button_type_auto{
-    pointer-events: none; /*Отмена hover эффектов для элемента*/
-}
-
 .header__theme-menu-button:focus{
     border-bottom: 1px solid #353430;
     outline: none;
@@ -37,28 +36,29 @@
 /* /Стилизация кнопок хэдера */
 
 .header {
+    display: grid;
+    align-items: center;
+    grid-template-rows: 1fr min-content 1fr;
     position: relative;
+    height: calc(100vh - 40px);
 }
 
 .header-decoration {
     display: none;
 }
 
-.header::before{
-    position: absolute;
-    z-index: -1;
-    content: "";
-    width: calc(100vw - 11px);
-    height: 100%;
-    left: -11px;
-    bottom: 21px;
-    background-image: url("../images/cover-image-light.png");
-    background-size: cover;
-    background-position: center;
-}
-
 body {
     background-color: #FFF1F7;
+    background-image: url("../images/cover-image-light.png");
+    background-repeat: no-repeat;
+    background-position: -103px 3px;
+    background-size: 120%;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
 }
 
 /* no focus */
@@ -67,15 +67,12 @@ body {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     color: #FFC2E6;
     margin-inline-start: -20px;
-    margin-block-start:-34px;
-    margin-block-end: -55px;
     text-shadow: 4px 4px 0px #FF0070;
 }
 
 .header_description-item {
     background-color: #FF8DCB;
-    margin-block-end: 158px;
-    margin-block-start: 132px;
+    margin-block-end: 40px;
 }
 /* /no focus */
 
@@ -83,10 +80,7 @@ body {
     font-weight: 700;
     font-size: 18px;
     width: 50%;
-    display: flex;
-    justify-content: flex-end;
     margin-inline-start: auto;
-    margin-block-start: -21px;
 }
 
 /* блок с описанием в хэдере */
@@ -101,25 +95,29 @@ body {
 }
 
 /* блоки с описанием в main */
-.main__description_title {
-    grid-area: 1 / 1 / 3 / 2;
+
+.main__description_title,
+.main__description_block-title,
+.main__description_block-text {
     font-size: 18px;
     font-weight: 700;
     color: #353430;
+    text-decoration: none;
+}
+
+.main__description_title {
+    grid-area: 1 / 1 / 3 / 2;
     width: 100%;
 }
 
 .main__description_block-title{
-    font-size: 18px;
-    font-weight: 700;
-    color: #353430;
+
     background: #FF8DCB;
 }
 
 .main__description_block-text{
-    font-size: 18px;
     font-weight: 400;
-    color: #353430;
+
     line-height: 1.3;
 }
 
@@ -134,74 +132,56 @@ body {
     grid-template-columns: 1fr 66%;
     gap: 20px;
     align-items: start;
-    padding-block-start: 39px;
+    margin-block-start: 80px;
 }
 
-.main__description_second{
+.main__description_concentration{
+    margin-block-start: 1px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 10vw 1fr;
     gap: 20px;
     align-items: start;
-    margin-block-start: 24px;
 }
 
-.main__description_title-second{
+.main__description_title-concentration{
     grid-area: 1 / 1 / 2 / 4;
     grid-template-columns: 1fr 1fr 1fr;
-    font-size: 18px;
-    font-weight: 700;
-    color: #353430;
-    margin-block-start: 54px;
     width: 30%;
 }
 
-.main__description_block-second{
+.main__description_block-concentration{
     width: 100%;
     gap: 10px;
     display: flex;
     flex-direction: column;
 }
 
-.main__description_block-last{
-    margin-block-end: 20px;
-    margin-block-start: 81px;
-}
-.main__description_title-third{
+.main__description_title-methods{
     grid-area: 1 / 1 / 7 / 2;
-    font-size: 18px;
-    font-weight: 700;
-    color: #353430;
-    margin-block-start: 81px;
     width: 100%;
 }
 
-.main__description_third{
-    margin-block-start: 1px;
+.main__description_methods{
+    margin-block-start: 2px;
     display: grid;
     grid-template-columns: 1fr 66%;
     gap: 20px;
 }
 
-.main__description_block-third{
+.main__description_block-methods{
     display: flex;
     flex-direction: column;
     height: fit-content;
     gap: 10px;
 }
 
-.main__description_block-thirdEmpty{
-    margin-block-start: 80px;
-}
-
-.main__description_block_title-third{
-    font-size: 18px;
+.main__description_block_title-methods{
     font-weight: 400;
-    color: #353430;
     background: #FF8DCB;
 }
 
-.main__description_last{
+.main__description_images{
+    margin-block-start: 20px;
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(3, 1fr);
@@ -231,6 +211,7 @@ body {
 .main__description_image-street{
     grid-column: span 2;
 }
+
 /* /блоки с описанием в main */
 
 /* footer */
@@ -242,68 +223,21 @@ body {
 }
 
 .footer{
-    margin-block-start: 60px;
+    margin-block-start: 86px;
     position: relative;
     display: flex;
     justify-content: center;
-    height: 73.4vw;
-}
-
-.header_title:after{
-    position: absolute;
-    content: "";
-    width: 25px;
-    height: 25px;
-    border-top: 1px solid #353430;
-    border-right: 1px solid #353430;
-    right: -1px;
-    top: 1px;
-}
-
-.header_title:before{
-    position: absolute;
-    content: "";
-    width: 25px;
-    height: 25px;
-    border-bottom: 1px solid #353430;
-    border-left: 1px solid #353430;
-    left: 0;
-    bottom: 0;
-    margin-block-end: 42px;
+    height: calc(100vh - 40px);
 }
 
 .footer_title{
     font-weight: 700;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     color: #FFC2E6;
-    margin-block-start:286px;
-    margin-block-end: -55px;
-    height: 10vw;
     text-shadow: 4px 4px 0px #FF0070;
+    margin: auto;
 }
 
-.footer_title:after{
-    position: absolute;
-    content: "";
-    width: 25px;
-    height: 25px;
-    border-top: 1px solid #353430;
-    border-right: 1px solid #353430;
-    margin-block-start: 25px;
-    right: 0;
-    top: 0;
-}
-
-.footer_title:before{
-    position: absolute;
-    content: "";
-    width: 25px;
-    height: 25px;
-    border-bottom: 1px solid #353430;
-    border-left: 1px solid #353430;
-    left: 0;
-    bottom: 0;
-}
 /* /footer */
 
 /* стилизация ссылок */
@@ -317,34 +251,62 @@ a:hover{
 }
 
 a:focus{
+    outline: none;
+}
+a:focus-visible{
     border: 1px solid #353430;
     outline: none;
 }
 /* /стилизация ссылок */
 
+.decorated-zone:before{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-inline-start: 1px solid #353430;
+    border-block-end: 1px solid #353430;
+}
+
+.decorated-zone:after{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    content: "";
+    width: 25px;
+    height: 25px;
+    border-inline-end: 1px solid #353430;
+    border-block-start: 1px solid #353430;
+}
+
 /* Медиазапросы */
 
-@media (375px < width <= 768px) {
+@media (width <= 768px) {
+
+    body{
+        background-position: -420px 15px;
+        background-size: 210%;
+    }
 
     .header__theme-menu-list {
 
-        flex-direction:column;
-        align-items: flex-end;
-        padding-block-start: 170px;
-        padding-inline-end: 7px;
-        gap: 11px;
+        grid-template-columns: auto;
+        justify-content: flex-end;
+        gap: 10px;
+        margin-block-start: 171px;
+        margin-inline-end: 8px;
 
     }
 
     .header_title{
-        margin-block-start: -125px;
-        margin-block-end: 22px;
         text-shadow: 4px 4px 0px #FF8DCB;
 
     }
 
     .header_description-item{
-        margin-block-end: 206px;
+        margin-block-end: 30px;
     }
 
     .main__description {
@@ -353,44 +315,42 @@ a:focus{
 
     }
 
-    .main__description_second {
+    .main__description_concentration {
 
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
-        gap: 0;
-        margin-block-start: -25px;
+        grid-template-rows: repeat(4, min-content);
+        gap: 22px;
 
     }
 
-    .main__description_title-second{
+    .main__description_title-concentration{
 
         grid-area: 1 / 1 / 2 / 2;
-        margin-block-start: 106px;
 
     }
 
-    .main__description_block-second{
+    .main__description_block-concentration{
 
         gap: 8px;
 
     }
 
-    .main__description_third{
+    .main__description_methods{
 
         grid-template-columns: 1fr 2fr;
 
     }
 
-    .main__description_last{
+    .main__description_images{
+
         grid-template-rows: 192px 229px 318px;
     }
 
     .footer{
-        height: 132vw;
+        margin-block-start: 84px;
     }
 
     .footer_title{
-        margin-block-start: 439px;
         text-shadow: 4px 4px 0px #FF8DCB;
     }
 
@@ -399,64 +359,45 @@ a:focus{
 @media (width <= 375px) {
 
     .page {
-        margin:10px;
+        padding:10px;
+        background-position: -358px -12px;
+        background-size: 290%;
     }
 
-    .header__theme-menu{
-        width: 90%;
-    }
+    .header{
 
-    .header::before{
-        left: -4px;
-        bottom: 90px;
-        width: calc(100vw - 20px);
+        grid-template-rows: 228px 192px 228px;
+        height: calc(100vh - 20px);
     }
 
     .header__theme-menu-list {
 
-        flex-direction:column;
-        align-items: flex-end;
-        padding-block-start: 64px;
-        margin-block-end: 69px;
-        margin-inline-end: -9px;
+        grid-template-columns: auto;
+        justify-content: flex-end;
         gap: 11px;
+        margin-block-start: 63px;
+        margin-inline-end: 8px;
 
     }
 
     .header_title{
         font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
         text-shadow: 4px 4px 0px #FF8DCB;
-        line-height: 94px;
         margin-inline-start: 0px;
-        margin-block-start: 70px;
-        margin-block-end: -76px;
+        line-height: 95.7px;
+        margin-block-start: 10px;
     }
-
-    .header_title:before {
-        margin-block-end: 101px;
-        margin-inline-start: -1px;
-    }
-
-    .header_title:after{
-        right: 21px;
-        top: 1px;
-    }
-
 
 
     .header_description{
-        width: 94.4%;
-        height: 108.4vw;
-        line-height: 24px;
-        margin-inline-start: -1px;
+
+        width: 100%;
+
     }
 
-    .main__description {
+    .header_description-item {
 
-        display: flex;
-        flex-direction: column;
-        margin-block-start: -24px;
-        width: 94.4%;
+        margin-block-end: 0px;
 
     }
 
@@ -464,91 +405,69 @@ a:focus{
         margin-inline-start: 0px;
     }
 
-    .main__description_block-title{
-        width: 95vw;
-    }
-
-    .main__description_title{
-
-
-        margin-block-start: -66px;
-        margin-inline-start: 0px;
-        width: 80%;
-
-    }
-
-    .main__description_second {
+    .main__description {
 
         display: flex;
         flex-direction: column;
-        margin-block-start: -54px;
-        margin-inline-start: 0px;
-        width: 94.4%;
+        gap: 20px;
+        margin-block-start: 50px;
 
     }
 
-    .main__description_title-second{
-
-        width: 94.4%;
-        margin-block-start: 106px;
-
-    }
-
-    .main__description_third {
+    .main__description_concentration {
 
         display: flex;
         flex-direction: column;
-        margin-block-start: -54px;
-        margin-inline-start: 0px;
-        width: 94.4%;
+
 
     }
 
-    .main__description_block-thirdEmpty {
-        margin-block-start: 0;
+    .main__description_title-concentration{
+
+    width: 100%;
+
     }
 
-    .main__description_title-third{
-
-        margin-block-start: 106px;
-        width: 100%;
-    }
-
-    .main__description_last {
+    .main__description_methods {
 
         display: flex;
         flex-direction: column;
-        margin-inline-end: 20px;
+
+
+    }
+
+    main{
+
+    gap: 50px;
+
+    }
+
+    .main__description_images {
+
+        display: flex;
+        flex-direction: column;
         gap: 10px;
+        margin-block-start: 10px;
 
     }
 
-    .main__description_block-last{
-        margin-block-start: 53px;
-        margin-inline-start: 0px;
-        margin-block-end: 11px;
-        width: 80%;
+    .main__description_block-images {
+
+        margin-block-start: 5px;
+
     }
 
     .footer {
-        height: 169.5vw;
+
+        height: calc(100vh - 20px);
+        margin-block-start: 50px;
+
     }
 
     .footer_title {
         font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
         text-shadow: 4px 4px 0px #FF8DCB;
-        margin-block-start: 237px;
-        margin-inline-start: -21px;
-    }
-
-    .footer_title:after {
-        margin-block-start: -10px;
-        right: 20px;
-    }
-
-    .footer_title:before {
-        margin-inline-start: -1px;
-        bottom: -2px;
+        margin: auto;
     }
 
 }
