--- a/styles/dark.css
+++ b/styles/dark.css
@@ -31,43 +31,7 @@
     position: relative;
 }
 
-.theme_dark .header__theme-menu-button_type_dark::after{
-    content: "";
-    position: absolute;
-    border: 1px solid #FF0070;
-    width: 70px;
-    height: 26px;
-    left: -7px;
-    top: 2px;
-}
-
-/*REC*/
-.theme_dark .header-decoration {
-    color: var(--heading_title-color);
-    display: flex;
-    position: absolute;
-    align-items: center;
-    font-size: 18px;
-    font-weight: 400;
-    top: 2px;
-    right: 29px;
-}
-
-.theme_dark .header-decoration::before {
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: 2;
-    width: 25px;
-    height: 25px;
-    background-image: url("../images/Ellipse.png");
-    background-position: center;
-    left: 35px;
-}
-/*/REC*/
-
 .theme_dark {
-    background-image: url("../images/cover-image-dark.png");
     background-color: var(--bg-color);
 }
 
@@ -141,6 +105,105 @@
 .theme_dark a:focus {
     border: 1px solid var(--text-color);
     outline: none;
+}
+
+@media (prefers-color-scheme: dark) {
+
+    .page.theme_auto {
+        /* сохраните этот селектор в приведённом виде.
+          Так стили написанные ниже будут иметь больший вес,
+          чем стили в медиазапросе предпочтений пользователя
+        */
+    }
+
+    .theme_auto .decorated-zone:before {
+        border-color: var(--heading_title-color);
+    }
+
+    .theme_auto .decorated-zone:after {
+        border-color: var(--heading_title-color);
+    }
+
+    .theme_auto .header__theme-menu-list{
+        position: relative;
+    }
+
+    .theme_auto {
+        background-color: var(--bg-color);
+    }
+
+    .theme_auto .header_title:after {
+        border-color: var(--heading_title-color);
+    }
+
+    .theme_auto .header_title:before {
+        border-color: var(--heading_title-color);
+    }
+
+    .theme_auto .footer_title:after {
+        border-color: var(--heading_title-color);
+    }
+
+    .theme_auto .footer_title:before {
+        border-color: var(--heading_title-color);
+    }
+
+    .theme_auto .main__description_title {
+        color: var(--heading_title-color);
+    }
+
+    .theme_auto .main__description_block-text {
+        color: var(--text-color);
+    }
+
+
+    .theme_auto .header__theme-menu-button {
+        color: var(--heading_title-color);
+    }
+
+    .theme_auto .header_title {
+        color: var(--focus-color);
+        text-shadow: 4px 4px 0px #FF0070;
+    }
+
+    .theme_auto .footer_title {
+        color: var(--focus-color);
+        text-shadow: 4px 4px 0px #FF0070;
+    }
+
+    .theme_auto .header_description-item {
+        background-color: var(--bg_title-color);
+        color: var(--title-color);
+    }
+
+    .theme_auto .main__description_block-title {
+        color: var(--title-color);
+        background-color: var(--bg_title-color);
+    }
+
+    .theme_auto .header__theme-menu-button:hover::after {
+
+        border: 1px solid rgba(255, 0, 112, 0.40);
+
+    }
+
+    .theme_auto .header__theme-menu-button:focus {
+        border-bottom: 1px solid var(--bg_title-color);
+    }
+
+    .theme_auto a:hover {
+        border-color: var(--text-color);
+    }
+
+    .theme_auto a {
+        text-shadow: 3px 2px 0px var(--bg_title-color);
+    }
+
+    .theme_auto a:focus {
+        border: 1px solid var(--text-color);
+        outline: none;
+    }
+
 }
 
 
