--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 
 body {
   max-inline-size: 1440px;
-  padding: 20px;
+  padding: 0 20px;
   margin: 0 auto;
   font-family: IBM Plex Mono, monospace;
 }
