--- a/styles/style.css
+++ b/styles/style.css
@@ -7,16 +7,17 @@
     gap: 25px;
     font-size: 18px;
     font-weight: 400;
+    margin-block-start: 20px;
 }
 .header__theme-menu{
     align-self: start;
 }
 
 .header__theme-menu-button{
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-    position: relative;
+     cursor: pointer;
+     border: none;
+     background-color: transparent;
+     position: relative;
 }
 
 .header__theme-menu-button:hover::after{
@@ -33,6 +34,33 @@
     border-bottom: 1px solid #353430;
     outline: none;
 }
+
+
+
+.theme_light .header__theme-menu-button_type_light::after{
+    content: "";
+    position: absolute;
+    border: 1px solid #353430;
+    width: 70px;
+    height: 26px;
+    left: -7px;
+    top: 2px;
+}
+
+.theme_auto .header__theme-menu-button_type_auto::after{
+    content: "";
+    position: absolute;
+    border: 1px solid #353430;
+    width: 70px;
+    height: 26px;
+    left: -7px;
+    top: 2px;
+}
+
+.header__theme-menu-button_active{
+    pointer-events: none;
+}
+
 /* /Стилизация кнопок хэдера */
 
 .header {
@@ -40,7 +68,8 @@
     align-items: center;
     grid-template-rows: 1fr min-content 1fr;
     position: relative;
-    height: calc(100vh - 40px);
+    height: 100vh;
+    min-height: 668px;
 }
 
 .header-decoration {
@@ -51,8 +80,9 @@ body {
     background-color: #FFF1F7;
     background-image: url("../images/cover-image-light.png");
     background-repeat: no-repeat;
-    background-position: -103px 3px;
-    background-size: 120%;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 main{
@@ -72,7 +102,7 @@ main{
 
 .header_description-item {
     background-color: #FF8DCB;
-    margin-block-end: 40px;
+    margin-block-end: 60px;
 }
 /* /no focus */
 
@@ -125,6 +155,7 @@ main{
     gap: 10px;
     display: flex;
     flex-direction: column;
+    grid-column-start: 2;
 }
 
 .main__description{
@@ -132,7 +163,8 @@ main{
     grid-template-columns: 1fr 66%;
     gap: 20px;
     align-items: start;
-    margin-block-start: 80px;
+    margin-block-start: 60px;
+    grid-auto-columns: auto;
 }
 
 .main__description_concentration{
@@ -166,6 +198,7 @@ main{
     display: grid;
     grid-template-columns: 1fr 66%;
     gap: 20px;
+    grid-auto-columns: auto;
 }
 
 .main__description_block-methods{
@@ -173,6 +206,7 @@ main{
     flex-direction: column;
     height: fit-content;
     gap: 10px;
+    grid-column-start: 2;
 }
 
 .main__description_block_title-methods{
@@ -223,11 +257,12 @@ main{
 }
 
 .footer{
-    margin-block-start: 86px;
+    margin-block-start: 66px;
     position: relative;
     display: flex;
     justify-content: center;
-    height: calc(100vh - 40px);
+    height: 100vh;
+    min-height: 648px;
 }
 
 .footer_title{
@@ -261,7 +296,7 @@ a:focus-visible{
 
 .decorated-zone:before{
     position: absolute;
-    bottom: 0px;
+    bottom: 20px;
     left: 0px;
     content: "";
     width: 25px;
@@ -273,7 +308,7 @@ a:focus-visible{
 .decorated-zone:after{
     position: absolute;
     right: 0px;
-    top: 0px;
+    top: 20px;
     content: "";
     width: 25px;
     height: 25px;
@@ -281,22 +316,108 @@ a:focus-visible{
     border-block-start: 1px solid #353430;
 }
 
+/* theme_dark */
+
+.theme_dark .header__theme-menu-button_type_dark::after{
+    content: "";
+    position: absolute;
+    border: 1px solid #FF0070;
+    width: 70px;
+    height: 26px;
+    left: -7px;
+    top: 2px;
+}
+
+/*REC*/
+.theme_dark .header-decoration {
+    color: var(--heading_title-color);
+    display: flex;
+    position: absolute;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 400;
+    top: 22px;
+    right: 29px;
+}
+
+.theme_dark .header-decoration::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: 2;
+    width: 25px;
+    height: 25px;
+    background-image: url("../images/Ellipse.png");
+    background-position: center;
+    left: 35px;
+}
+
+/*/REC*/
+
+.theme_dark {
+    background-image: url("../images/cover-image-dark.png");
+}
+/* /theme_dark */
+
+/* theme_auto */
+
+@media (prefers-color-scheme: dark) {
+
+    .page.theme_auto {
+        /* сохраните этот селектор в приведённом виде.
+          Так стили написанные ниже будут иметь больший вес,
+          чем стили в медиазапросе предпочтений пользователя
+        */
+    }
+
+    .theme_auto {
+        background-image: url("../images/cover-image-dark.png");
+    }
+
+    .theme_auto .header-decoration {
+        color: var(--heading_title-color);
+        display: flex;
+        position: absolute;
+        align-items: center;
+        font-size: 18px;
+        font-weight: 400;
+        top: 22px;
+        right: 29px;
+    }
+
+    .theme_auto .header-decoration::before {
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: 2;
+        width: 25px;
+        height: 25px;
+        background-image: url("../images/Ellipse.png");
+        background-position: center;
+        left: 35px;
+    }
+
+}
+
+/* /theme_auto */
+
 /* Медиазапросы */
 
 @media (width <= 768px) {
-
-    body{
-        background-position: -420px 15px;
-        background-size: 210%;
-    }
 
     .header__theme-menu-list {
 
         grid-template-columns: auto;
         justify-content: flex-end;
         gap: 10px;
-        margin-block-start: 171px;
+        margin-block-start: 42px;
         margin-inline-end: 8px;
+
+    }
+
+    .header__theme-menu {
+
+        align-self: center;
 
     }
 
@@ -306,7 +427,7 @@ a:focus-visible{
     }
 
     .header_description-item{
-        margin-block-end: 30px;
+        margin-block-end: 49px;
     }
 
     .main__description {
@@ -347,7 +468,7 @@ a:focus-visible{
     }
 
     .footer{
-        margin-block-start: 84px;
+        margin-block-start: 64px;
     }
 
     .footer_title{
@@ -358,25 +479,21 @@ a:focus-visible{
 
 @media (width <= 375px) {
 
-    .page {
-        padding:10px;
-        background-position: -358px -12px;
-        background-size: 290%;
-    }
-
     .header{
-
-        grid-template-rows: 228px 192px 228px;
-        height: calc(100vh - 20px);
+        padding-block-end: 20px;
     }
+
+    .page {
+        padding: 10px;
+    }
+
 
     .header__theme-menu-list {
 
         grid-template-columns: auto;
         justify-content: flex-end;
         gap: 11px;
-        margin-block-start: 63px;
-        margin-inline-end: 8px;
+        margin-block-start: 0;
 
     }
 
@@ -385,7 +502,6 @@ a:focus-visible{
         text-shadow: 4px 4px 0px #FF8DCB;
         margin-inline-start: 0px;
         line-height: 95.7px;
-        margin-block-start: 10px;
     }
 
 
@@ -409,8 +525,7 @@ a:focus-visible{
 
         display: flex;
         flex-direction: column;
-        gap: 20px;
-        margin-block-start: 50px;
+        margin-block-start: 31px;
 
     }
 
@@ -457,17 +572,36 @@ a:focus-visible{
 
     }
 
+    .decorated-zone:after{
+        top: 0px;
+    }
+
     .footer {
 
-        height: calc(100vh - 20px);
-        margin-block-start: 50px;
+        margin-block-start: 49px;
+        padding-block-end: 19px;
 
     }
 
     .footer_title {
         font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
         text-shadow: 4px 4px 0px #FF8DCB;
-        margin: auto;
+    }
+
+    .theme_dark .header-decoration {
+        top: 2px;
+    }
+
+    .theme_auto .header-decoration {
+        top: 2px;
+    }
+
+}
+
+@media ( 424px > width > 375px) {
+
+    .header_description {
+        width: 100%;
     }
 
 }
